# resqai

./: .env.example  .gitignore  230610021-YapayZekaRapor.docx  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: menu.json
dataset/: dataset.csv
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: PROJE_MIMARISI_VE_YOL_HARITASI.md  todo.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
menu/: menu.json
src/resqai/: __init__.py  api.py  dataset_quality.py  diagnose4.py  entities.py  menu.py  metrics.py  model.py  preprocess.py  repository.py  responses.py  train.py
tests/: test_resqai.py
